Añadidas celdas del modo

--- a/Pitagorin/en.lproj/Localizable.strings
+++ b/Pitagorin/en.lproj/Localizable.strings
@@ -4,3 +4,6 @@
 "Pitagorin" = "Pitagorin";
 "Substraction" = "Substraction";
 "Mode Selection" = "Mode Selection";
+"Survival" = "Survival";
+"CountDown" = "CountDown";
+"Practice" = "Practice";
