--- a/Pitagorin/es.lproj/Localizable.strings
+++ b/Pitagorin/es.lproj/Localizable.strings
@@ -5,3 +5,6 @@
 "Pitagorin" = "Pitagorin";
 "Substraction" = "Resta";
 "Mode Selection" = "Selección de modo";
+"Survival" = "Survival";
+"CountDown" = "Cuenta atrás";
+"Practice" = "Práctica";
